--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 <li class="grid-item p_one animate">
   <a class="item-link" href="project-hubli.html">
-    <img src="images/hubli.jpg" alt="" />
+    <img src="images/hublicover.jpg" alt="" />
     <div class="portfolio-text-holder">
       <p class="portfolio-title">APP</p>
     </div>
