--- a/project-hubli.html
+++ b/project-hubli.html
@@ -118,7 +118,7 @@
 
                     <div class="two_third">
                         <div class="medium-text">
-                            The corporate logo consists in two elements, the symbol and its typography. The symbol is a powerful image that evokes the culture of the company's products - the connection between electrical power and hydraulic fluidity.
+                             An application that centralizes and organizes content to teach and learn in a collaborative way.
                         </div>
                         <br>
                         <p>
