--- a/about.html
+++ b/about.html
@@ -167,16 +167,16 @@
                       Technology enthusiast and passionate about Design. I like to work on ambitious projects and with people who are passionate about what they do.
                       </div>
                       <br>
-                        In 2012 I moved to Curitiba to start higher education. Like every young person at this age, I was completely lost as to what career path to pursue and eventually I choose to study Law.
+                      In 2012, I moved to Curitiba to start Higher Education. Like almost every young person under 20, I was undecided as to what career path to pursue, and eventually, I chose to study Law.
                         <br>
                         <br>
-                        During my five years degree I worked in the public area, in law offices, and even at Walt Disney World - which was an amazing experience. Over there I learned a lot about business - especially with customer service (which will be very important in the future of this timeline) - but none of those other jobs really suited me.
+                        During my five-year degree, I worked in the public area, in Law offices, but none of these jobs suited me. Within this period, I had a three-month work experience at Walt Disney World Resort, which was tremendous. Over there, I learned a lot about business - especially about customer service, which has inspired me to build my customer service philosophy and skills to my current working area.
                         <br>
                         <br>
-                        So I realized that I had to go on a path to find my true motivation. I noticed that all my hobbies and passions were related to an area that I had never even considered before, <b>Design</b>. After going to lectures and taking courses I found purpose and meaning in this area full of creativity and innovation. So I started a new degree, this time in Design, where I could choose from a variety of elective courses and focus on the area of <b>User Experience</b> and <b>User Interaction</b>.
+                        After finishing my degree in Law, I realized that I had to get into my inherent interests to find my self-motivation. I noticed that my hobbies and passions were concerned with an area that I had never even considered before - Design. After going to lectures and taking courses, I found purpose and meaning in this fantastic area full of creativity and innovation. So, I started my new degree, this time in Design, where I could choose from a variety of elective courses and focus on the area of <b>User Experience</b> and <b>User Interaction</b>.
                         <br>
                         <br>
-                        Currently I'm part of the Apple Developer Academy. It has been a unique and very rewarding opportunity since I’ve been learning a lot about design and developing coding skills.
+                        Currently I am part of the Apple Developer Academy. It has been a unique and very rewarding opportunity since I have been learning a lot about design and developing coding skills.
                         <br>
                         <br>
                         For the whole curriculum click <a href="https://www.dropbox.com/s/n0rfy0c1a8xzwmu/CurriculumRodolfoDinizBiazi-2020.pdf?dl=0"><u>here</u></a>.
