--- a/project-ads.html
+++ b/project-ads.html
@@ -118,14 +118,14 @@
 
                     <div class="two_third">
                         <div class="medium-text">
-                            The corporate logo consists in two elements, the symbol and its typography. The symbol is a powerful image that evokes the culture of the company's products - the connection between electrical power and hydraulic fluidity.
+                            The corporate logo consists of two elements - symbol and typography. The symbol is a powerful image that evokes the culture of the company's products - the connection between electrical power and hydraulic fluidity.
                         </div>
                         <br>
                         <p>
-                          The typography has been carefully chosen for its modern yet refined, highly readable style, which has been enhanced by the use of capital letters. The letter shapes are shaped to compliment and balance perfectly with the logo symbol.
+                        I carefully selected the types of letters for its modern yet refined, highly readable style, which was enhanced by the use of capital letters, and I created the shapes of letters to complement and balance perfectly with the logo symbol.
 <br>
 <br>
-                          The two corporate colors are blue and orange. It is a fresh and appealing blend of complementary colors chosen for its strong combination of modern and classic, a timeless solution.
+                          The two colors in the corporate branding are blue and orange. It is a fresh and appealing blend of complementary colors chosen for its visually bright combination of modernity and class, a timeless solution.
                         </p>
                     </div>
 
