--- a/project-cubx.html
+++ b/project-cubx.html
@@ -117,14 +117,14 @@
 
                     <div class="two_third">
                         <div class="medium-text">
-                            Apple's WWDC Scholarship Program enables students and new developers to request the chance to attend the conference with most of the expenses covered.
+                            Apple's WWDC Scholarship Program enables students and new developers to have the chance to attend the conference with most of the expenses covered.
                         </div>
                         <br>
                         <p>
-                          As my first year applying for the scholarship, I spent 10 days at the Apple Developer Academy busting my head to create an experiment to submit to the WWDC19. And from there was born CUBX, a puzzle carefully made for players who like the genre - or for those who need some moments of visual tranquility.
+                          As my first year applying for the scholarship, I spent ten days at the Apple Developer Academy, racking my brain to build a project to submit to WWDC19. After hard and intense work, CUBX was born, a puzzle carefully made for players who enjoy the genre - or for those who need some moments of visual tranquility.
 <br>
 <br>
-Among several creative projects I was one of the award-winning students to go to the US to spend a week in San Jose/CA taking advantage of every second of the lectures and sessions provided by Apple.
+Among several creative projects, I was one of the award-winning students to go to the US to spend a week in San Jose/CA, making the most of every second of the lectures and sessions provided by Apple.
 <br>
 <br>
                 For more information about the project click <a href="https://youtu.be/pSGEoZ1iin4"><u>here</u></a>.
