--- a/project-food-app.html
+++ b/project-food-app.html
@@ -118,12 +118,12 @@
 
                     <div class="two_third">
                         <div class="medium-text">
-                            This interface was developed based on Ana Miminoshvili's restaurant icon kit and was my first experience using the Adobe XD.
+                          This interface was developed based on Ana Miminoshvili's restaurant icon kit and it was my first experience using the Adobe XD.
 
                         </div>
                         <br>
                         <p>
-                          The challenge was to rethink the way filters are normaly displayed on mobile interfaces.
+                          The challenge was to rethink the way filters are normally displayed on mobile interfaces.
                         </p>
                     </div>
 
