--- a/project-juicy-way.html
+++ b/project-juicy-way.html
@@ -118,11 +118,11 @@
 
                     <div class="two_third">
                         <div class="medium-text">
-                            Join this intergalactic run into the Juicy Way! How many light-years can you travel? Challenge yourself and friends in this sweet journey.
+                            Join this intergalactic run into the Juicy Way! How many light-years can you travel? Challenge yourself and friends in this sweet journey!
                         </div>
                         <br>
                         <p>
-                        Juicy Way is a galactic game that is set on a fruity galaxy. It's a free endless runner 2D experience developed by one designer and one developer.
+                          Juicy Way is a galactic game that is set on a fruity galaxy. It is a free endless runner 2D experience developed by one designer and one developer.
 <br>
 <br>
                           The app is in it's first version and you can download it by clicking <a href="https://apps.apple.com/br/app/juicy-way/id1502906162"><u>here</u></a>.
