--- a/project-sheb.html
+++ b/project-sheb.html
@@ -118,11 +118,11 @@
 
                     <div class="two_third">
                         <div class="medium-text">
-                            SHEB’s differential is a close and strong relationship between the firm and it's clients, making SHEB's team accessible and dedicated to the matter.
+                            SHEB’s differential is a close and strong relationship between the firm and its clients, making SHEB's team accessible and committed to work.
                         </div>
                         <br>
                         <p>
-                          In order to meet the client’s needs and give a high-quality service, the lawyers and consultants have years of experience in several areas of knowledge, and also are fluent in several languages, such as English, German, Spanish, and Italian.
+                          To meet the clients’ needs and offer a high-quality service, the lawyers and consultants have years of experience in several areas of knowledge, and are also fluent in several languages, such as English, German, Spanish, and Italian.
                         </p>
                     </div>
 
