--- a/project-stack-a-flag.html
+++ b/project-stack-a-flag.html
@@ -118,17 +118,17 @@
 
                     <div class="two_third">
                         <div class="medium-text">
-                            Stack A Flag is a digital experience that teaches the first steps of creating layout through SwiftUI, in a visual, fun and universal way.
+                          Stack A Flag is a digital experience that teaches the first steps of creating a layout through SwiftUI, in a visual, fun, and universal way.
                         </div>
                         <br>
                         <p>
-                          By using the principle of gamification of knowledge, Stack A Flag allows its user to learn how to create a layout by organizing the colors of the flags, thus evolving learning, and associating their discoveries with programming.
+                          By using the principle of gamification of knowledge, Stack A Flag allows its users to learn how to create a layout by organizing the colors of the flags, thus building knowledge and associating their discoveries with programming.
 <br>
 <br>
-                          Visually promoting uncomplicated and universal knowledge about programming, contributing to the development of new programmers.
+                          It visually promotes uncomplicated and universal knowledge about programming, contributing to the development of new programmers.
                           <br>
                           <br>
-                          This project was submitted to the WWDC20 Swift Student Challenge and turned out to be choosen, among several other creative project, as one of these year's best projects. At the moment the project is being built for iOS devices.
+                        This project was submitted to the WWDC20 Swift Student Challenge and was selected, among several other creative projects, as one of the year's winners projects. At the moment, I am developing the project for iOS devices.
                         </p>
                     </div>
 
