--- a/project-ventum.html
+++ b/project-ventum.html
@@ -115,17 +115,17 @@
 
                     <div class="two_third">
                         <div class="medium-text">
-                            Ventum is an app that focus on turning the act of planning and sharing travel plans into a fun experience.
+                            Ventum is an app that focuses on turning the act of planning and sharing travel plans into a fun experience.
                         </div>
                         <br>
                         <p>
-                          The main goal with the interface was to keep it simple, so the user wouldn’t need to waste time with data input and the experience of planning and registering everything would be quick and easy. The idea was to let the user experiment eveything our app has to offer before, so the user would feel motivated to register.
+                          The main goal with the interface was to keep it simple, so the user wouldn’t need to waste time with data input, and the experience of planning and registering everything would be quick and easy. The idea was to let the user experiment with everything our app has to offer, so the user would feel motivated to register.
 <br>
 <br>
-                          After some research, it was proposed the word Ventum, from Latin meaning <i>breeze</i> or <i>air</i>, as the name of the app, due to the idea of freedom and movement that is often connected with the air element.
+                          After searching, we decided for the term Ventum, meaning <i>breeze</i> or <i>air</i> from Latin, as the name of the app, due to the idea of freedom and movement often connected with the air element.
                           <br>
                           <br>
-                          On the icon, the blue inspires a sense of tranquility, and it also resembles the open blue skies for your perfect travel. The traces that goes beyond the limits of the central square indicates the routine break, as well as freedom and movement. It also suggests the mechanics of adding activities to the planning days, just like the interface.
+                          On the icon, the blue inspires a sense of tranquility, and it also resembles the open blue skies for your perfect travel, and the lines that go beyond the limits of the central square indicates the routine break as well as freedom and movement. It also suggests the mechanics of adding activities to the planning days, just like the interface.
                           <br>
                           <br>
                                           For more information about the project click <a href="https://www.dropbox.com/s/9c5lk49mw2peybr/VentumDocumentationFinal.pdf?dl=0"><u>here</u></a>.
