--- a/project-ventum.html
+++ b/project-ventum.html
@@ -125,7 +125,7 @@
                           After searching, we decided for the term Ventum, meaning <i>breeze</i> or <i>air</i> from Latin, as the name of the app, due to the idea of freedom and movement often connected with the air element.
                           <br>
                           <br>
-                          On the icon, the blue inspires a sense of tranquility, and it also resembles the open blue skies for your perfect travel, and the lines that go beyond the limits of the central square indicates the routine break as well as freedom and movement. It also suggests the mechanics of adding activities to the planning days, just like the interface.
+                          On the icon, the blue inspires a sense of tranquility, and it also resembles the open blue skies for the perfect travel, and the lines that go beyond the limits of the central square indicates the routine break as well as freedom and movement. It also suggests the mechanics of adding activities to the planning days, just like the interface.
                           <br>
                           <br>
                                           For more information about the project click <a href="https://www.dropbox.com/s/9c5lk49mw2peybr/VentumDocumentationFinal.pdf?dl=0"><u>here</u></a>.
