--- a/project-ads.html
+++ b/project-ads.html
@@ -122,7 +122,7 @@
                         </div>
                         <br>
                         <p>
-                        I carefully selected the types of letters for its modern yet refined, highly readable style, which was enhanced by the use of capital letters, and I created the shapes of letters to complement and balance perfectly with the logo symbol.
+                        The typography has been carefully chosen for its modern yet refined, highly readable style, which has been enhanced by the use of capital letters. The letter shapes are shaped to compliment and balance perfectly with the logo symbol.
 <br>
 <br>
                           The two colors in the corporate branding are blue and orange. It is a fresh and appealing blend of complementary colors chosen for its visually bright combination of modernity and class, a timeless solution.
