--- a/project-hubli.html
+++ b/project-hubli.html
@@ -125,7 +125,7 @@
                           The typography has been carefully chosen for its modern yet refined, highly readable style, which has been enhanced by the use of capital letters. The letter shapes are shaped to compliment and balance perfectly with the logo symbol.
 <br>
 <br>
-                          The two corporate colors are blue and orange. It is a fresh and appealing blend of complementary colors chosen for its strong combination of modern and classic, a timeless solution.
+                          For more information about the project click <a href="https://www.icloud.com/keynote/0sOFTokTi3t6AShQVR0ealZ4A#HubliPresentation"><u>here</u></a>.
                         </p>
                     </div>
 
