--- a/project-hubli.html
+++ b/project-hubli.html
@@ -122,10 +122,13 @@
                         </div>
                         <br>
                         <p>
-                          The typography has been carefully chosen for its modern yet refined, highly readable style, which has been enhanced by the use of capital letters. The letter shapes are shaped to compliment and balance perfectly with the logo symbol.
+                          The COVID-19 pandemic has created the largest disruption of education systems in history, affecting nearly 1.6 billion learners in more than 190 countries and all continents. Closures of schools and other learning spaces have impacted 94% of the world’s student population, up to 99% in low and lower-middle income countries.
 <br>
+teachers, in turn, have been working longer hours because they have gained the extra work of adapting their classes to the digital environment. They had to learn how to use technologies to upload content - for example, putting together online forms and creating slides for presentations in Google Classroom. In addition, after class, they need to check and answer students' emails and comments on the platform itself.
 <br>
-                          For more information about the project click <a href="https://www.icloud.com/keynote/0sOFTokTi3t6AShQVR0ealZ4A#HubliPresentation"><u>here</u></a>.
+To help both student and educator, our challenge is to use the collaborative intelligence using Hubli. Hubli is the best tool to share resources and content between a mentor and their apprentices.
+<br>
+                          For more information about this ongoing project click <a href="https://www.icloud.com/keynote/0sOFTokTi3t6AShQVR0ealZ4A#HubliPresentation"><u>here</u></a>.
                         </p>
                     </div>
 
