--- a/project-hubli.html
+++ b/project-hubli.html
@@ -103,13 +103,13 @@
                     <div id="slider1" class="simple-image-slider-wrapper relative swiper-container" data-speed="1500" data-auto="true">
                         <div class="swiper-wrapper image-slider slider">
                             <div class="swiper-slide">
-                                <img src="images/item_01.jpg" alt="">
+                                <img src="images/hubli001.jpg" alt="">
                             </div>
                             <div class="swiper-slide">
                                 <img src="images/item_02.jpg" alt="">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/item_03.jpg" alt="">
+                                <img src="images/hubli01.jpg" alt="">
                             </div>
                         </div>
                         <div class="clear"></div>
