--- a/project-hubli.html
+++ b/project-hubli.html
@@ -106,7 +106,7 @@
                                 <img src="images/hubli001.jpg" alt="">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/item_02.jpg" alt="">
+                                <img src="images/hubli002.jpg" alt="">
                             </div>
                             <div class="swiper-slide">
                                 <img src="images/hubli01.jpg" alt="">
