--- a/project-hubli.html
+++ b/project-hubli.html
@@ -108,9 +108,9 @@
                             <div class="swiper-slide">
                                 <img src="images/hubli001.jpg" alt="">
                             </div>
-                            <div class="swiper-slide">
+                            <!-- <div class="swiper-slide">
                                 <img src="images/hubli01.jpg" alt="">
-                            </div>
+                            </div> -->
                         </div>
                         <div class="clear"></div>
                         <div class="swiper-pagination simple-image-slider-pagination swiper-pagination-slider1"></div>
