--- a/project-hubli.html
+++ b/project-hubli.html
@@ -128,7 +128,7 @@
 Teachers, in turn, have been working longer hours because they have gained the extra work of adapting their classes to the digital environment. They had to learn how to use technologies to upload content - for example, putting together online forms and creating slides for presentations in Google Classroom. In addition, after class, they need to check and answer students' emails and comments on the platform itself.
 <br>
 <br>
-To help both student and educator, our challenge is to use the collaborative intelligence using Hubli. Hubli is the best tool to share resources and content between a mentor and their apprentices.
+To help both student and educator, our challenge is to stimulate the collaborative intelligence through Hubli. Hubli is the best tool to share resources and content between a mentor and their apprentices.
 <br>
 <br>
                           For more information about this ongoing project click <a href="https://www.icloud.com/keynote/0sOFTokTi3t6AShQVR0ealZ4A#HubliPresentation"><u>here</u></a>.
