--- a/project-hubli.html
+++ b/project-hubli.html
@@ -118,7 +118,7 @@
 
                     <div class="two_third">
                         <div class="medium-text">
-                             An application that centralizes and organizes content to teach and learn in a collaborative way.
+                             Hubli is an application that centralizes and organizes content to teach and learn in a collaborative way.
                         </div>
                         <br>
                         <p>
