--- a/project-hubli.html
+++ b/project-hubli.html
@@ -122,13 +122,19 @@
                         </div>
                         <br>
                         <p>
-                          The COVID-19 pandemic has created the largest disruption of education systems in history, affecting nearly 1.6 billion learners in more than 190 countries and all continents. Closures of schools and other learning spaces have impacted 94% of the world’s student population, up to 99% in low and lower-middle income countries.
+                          Now, our point is: How can Hubli help reimagine education and change in teaching and learning to face the challenges that emerged from the pandemic right now and beyond?
 <br>
 <br>
-Teachers, in turn, have been working longer hours because they have gained the extra work of adapting their classes to the digital environment. They had to learn how to use technologies to upload content - for example, putting together online forms and creating slides for presentations in Google Classroom. In addition, after class, they need to check and answer students' emails and comments on the platform itself.
+According to the United Nations Policy Brief: Educations during COVID-19 and beyond (2020), our current global educational scenario of school closures and education disruption is the following:
 <br>
 <br>
-To help both student and educator, our challenge is to stimulate the collaborative intelligence through Hubli. Hubli is the best tool to share resources and content between a mentor and their apprentices.
+“the COVID-19 pandemic has created the largest disruption of education systems in history, affecting nearly 1.6 billion learners in more than 190 countries and all continents. Closures of schools and other learning spaces have impacted 94% of the world’s student population, up to 99% in low and lower-middle income countries” (UNSDG, 2020, p. 2).
+<br>
+<br>
+Given that, teachers have been working longer hours because they have gained the extra work of adapting their classes to the digital environment. They are learning how to use technologies to upload content - for example, putting together online forms and creating slides for presentations in Google Classroom. Besides, after class, they need to check and answer students' emails and comments on the platform itself.
+<br>
+<br>
+To help both educators and students, our challenge is to stimulate collaborative intelligence through Hubli. Hubli is the best tool to share resources and content between a mentor and their apprentices.
 <br>
 <br>
                           For more information about this ongoing project click <a href="https://www.icloud.com/keynote/0sOFTokTi3t6AShQVR0ealZ4A#HubliPresentation"><u>here</u></a>.
