--- a/project-hubli.html
+++ b/project-hubli.html
@@ -128,7 +128,7 @@
 According to the United Nations Policy Brief: Educations during COVID-19 and beyond (2020), our current global educational scenario of school closures and education disruption is the following:
 <br>
 <br>
-“the COVID-19 pandemic has created the largest disruption of education systems in history, affecting nearly 1.6 billion learners in more than 190 countries and all continents. Closures of schools and other learning spaces have impacted 94% of the world’s student population, up to 99% in low and lower-middle income countries” (UNSDG, 2020, p. 2).
+“<i>the COVID-19 pandemic has created the largest disruption of education systems in history, affecting nearly 1.6 billion learners in more than 190 countries and all continents. Closures of schools and other learning spaces have impacted 94% of the world’s student population, up to 99% in low and lower-middle income countries</i>” (UNSDG, 2020, p. 2).
 <br>
 <br>
 Given that, teachers have been working longer hours because they have gained the extra work of adapting their classes to the digital environment. They are learning how to use technologies to upload content - for example, putting together online forms and creating slides for presentations in Google Classroom. Besides, after class, they need to check and answer students' emails and comments on the platform itself.
