--- a/project-hubli.html
+++ b/project-hubli.html
@@ -122,7 +122,7 @@
                         </div>
                         <br>
                         <p>
-                          Now, our point is: How can Hubli help reimagine education and change in teaching and learning to face the challenges that emerged from the pandemic right now and beyond?
+                          Now, our point is: how can Hubli help reimagine education and change in teaching and learning to face the challenges that emerged from the pandemic right now and beyond?
 <br>
 <br>
 According to the United Nations Policy Brief: Educations during COVID-19 and beyond (2020), our current global educational scenario of school closures and education disruption is the following:
