--- a/project-ventum.html
+++ b/project-ventum.html
@@ -119,10 +119,10 @@
                         </div>
                         <br>
                         <p>
-                          The main goal with the interface was to keep it simple, so the user wouldn’t need to waste time with data input, and the experience of planning and registering everything would be quick and easy. The idea was to let the user experiment with everything our app has to offer, so the user would feel motivated to register.
+                          The main goal with the interface is to keep it simple, so the user does not need to waste time with data input, and the experience of planning and registering travel plans will be quick and easy. The idea is to let the user experiment with everything our app has to offer, so the user will certainly feel motivated to register.
 <br>
 <br>
-                          After searching, we decided for the term Ventum, meaning <i>breeze</i> or <i>air</i> from Latin, as the name of the app, due to the idea of freedom and movement often connected with the air element.
+                          As for the name of the app, we decided for the term Ventum, meaning <i>breeze</i> or <i>air</i> from Latin, due to the idea of freedom and movement often connected with the air element.
                           <br>
                           <br>
                           On the icon, the blue inspires a sense of tranquility, and it also resembles the open blue skies for the perfect travel, and the lines that go beyond the limits of the central square indicates the routine break as well as freedom and movement. It also suggests the mechanics of adding activities to the planning days, just like the interface.
