--- a/project-juicy-way.html
+++ b/project-juicy-way.html
@@ -118,11 +118,17 @@
 
                     <div class="two_third">
                         <div class="medium-text">
-                            Join this intergalactic run into the Juicy Way! How many light-years can you travel? Challenge yourself and friends in this sweet journey!
+                            Juicy Way is a galactic game that is set on a fruity galaxy. It is a free endless runner 2D experience developed by one designer and one developer.
                         </div>
                         <br>
                         <p>
-                          Juicy Way is a galactic game that is set on a fruity galaxy. It is a free endless runner 2D experience developed by one designer and one developer.
+                          Juicy Way was born in a three weeks challenge at the Apple Developer Academy, in which we had to develop and publish a hyper casual game with the aim of applying freemium monetization and monitoring the results.
+<br>
+<br>
+Some general parameters that we had: hyper-casual game; preferably 2D with few visual elements and interactions; rapid phases/interactions lasting from ten seconds to two minutes.
+<br>
+<br>
+In the first week we developed the basic mechanics and submitted to Test Flight; in the second week we included monetization and analytics, and submitted for publication; on the third and final week the focus was on user acquisition, campaign development and metrics tracking.
 <br>
 <br>
                           The app is in it's first version and you can download it by clicking <a href="https://apps.apple.com/br/app/juicy-way/id1502906162"><u>here</u></a>.
