--- a/project-ads.html
+++ b/project-ads.html
@@ -118,14 +118,17 @@
 
                     <div class="two_third">
                         <div class="medium-text">
-                            The ADS corporate logo consists of two rich elements - symbol and typography. I opted for a symbol that brings out the powerful image underlying the culture of the company's products - the connection between electrical power and hydraulic fluidity.
+                            ADS Eletro is an electrical supply store. They have been operating since 1989, becoming one of the main distributors of electrical material in the region and they were looking for a new identity that spoke with their customers.
                         </div>
                         <br>
                         <p>
+                          The ADS corporate logo consists of two rich elements - symbol and typography. I opted for a symbol that brings out the powerful image underlying the culture of the company's products - the connection between electrical power and hydraulic fluidity.
+                          <br>
+                          <br>
                         The typography has been carefully chosen for its modern yet refined, highly readable style, which has been enhanced by the use of capital letters. The letters are perfectly shaped to complement and balance with the logo symbol.
 <br>
 <br>
-                        The two colors in the corporate branding are blue and orange. It is a fresh and appealing blend of complementary colors chosen for its visually bright combination of modernity and class, a timeless solution.
+                        The two colors in the corporate branding are blue and orange and they were not changed on the redesign. It is a fresh and appealing blend of complementary colors chosen for its visually bright combination of modernity and class, a timeless solution.
                         </p>
                     </div>
 
