--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <li class="grid-item p_one_hlaf animate">
     <a class="item-link" href="project-juicy-way.html">
   <!-- <a class="item-link" href="images/home_06.jpg" data-rel="prettyPhoto[portfolio]"> -->
-    <img src="images/juicyindex.png" alt="" />
+    <img src="images/juicyindex.jpg" alt="" />
     <div class="portfolio-text-holder">
       <p class="portfolio-title">APP</p>
     </div>
