--- a/project-juicy-way.html
+++ b/project-juicy-way.html
@@ -106,7 +106,7 @@
                                 <img src="images/juicyway.001.jpeg" alt="">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/juicyway.002.jpeg" alt="">
+                                <img src="images/juicyway3.jpg" alt="">
                             </div>
                             <div class="swiper-slide">
                                 <img src="images/juicyway.003.jpeg" alt="">
