--- a/project-juicy-way.html
+++ b/project-juicy-way.html
@@ -128,6 +128,9 @@
 Some general parameters that we had: hyper-casual game; preferably 2D with few visual elements and interactions; rapid phases/interactions lasting from ten seconds to two minutes.
 <br>
 <br>
+Because of those general parameters, the focus on the interface was to be very engaging. So the solution was to always have the game just one play-tap away. In order to do that, the menu on the game works like a layer that goes above while the intergalactic spaceship is always traveling through the Juicy Way.
+<br>
+<br>
 In the first week we developed the basic mechanics and submitted to Test Flight; in the second week we included monetization and analytics, and submitted for publication; on the third and final week the focus was on user acquisition, campaign development and metrics tracking.
 <br>
 <br>
