--- a/project-juicy-way.html
+++ b/project-juicy-way.html
@@ -134,6 +134,9 @@ Because of those general parameters, the focus on the interface was to be very e
 In the first week we developed the basic mechanics and submitted to Test Flight; in the second week we included monetization and analytics, and submitted for publication; on the third and final week the focus was on user acquisition, campaign development and metrics tracking.
 <br>
 <br>
+The menu and the HUD was projected and coded by me using SwiftUI, while the mechanics was developed by the developer - André Tosin - using SpriteKit.
+<br>
+<br>
                           The app is in it's first version and you can download it by clicking <a href="https://apps.apple.com/br/app/juicy-way/id1502906162"><u>here</u></a>.
                         </p>
                     </div>
