--- a/project-juicy-way.html
+++ b/project-juicy-way.html
@@ -122,19 +122,19 @@
                         </div>
                         <br>
                         <p>
-                          Juicy Way was born in a three weeks challenge at the Apple Developer Academy, in which we had to develop and publish a hyper casual game with the aim of applying freemium monetization and monitoring the results.
+                          Juicy Way was born in a three-week challenge at the Apple Developer Academy, when we had to develop and publish a hyper casual game with the aim of applying freemium monetization and monitoring the results.
 <br>
 <br>
-Some general parameters that we had: hyper-casual game; preferably 2D with few visual elements and interactions; rapid phases/interactions lasting from ten seconds to two minutes.
+Some general parameters that we had to follow: hyper-casual game; preferably 2D with few visual elements and interactions; rapid phases/interactions lasting from ten seconds to two minutes.
 <br>
 <br>
-Because of those general parameters, the focus on the interface was to be very engaging. So the solution was to always have the game just one play-tap away. In order to do that, the menu on the game works like a layer that goes above while the intergalactic spaceship is always traveling through the Juicy Way.
+Given such general parameters, the focus on the interface was to be very engaging. So, the solution was to always have the game just one play-tap away. To do that, the menu on the game has been designed to work like a layer that goes above while the intergalactic spaceship is always traveling through the Juicy Way.
 <br>
 <br>
-In the first week we developed the basic mechanics and submitted to Test Flight; in the second week we included monetization and analytics, and submitted for publication; on the third and final week the focus was on user acquisition, campaign development and metrics tracking.
+In the first week, we developed the basic mechanics and submitted to Test Flight; in the second, we included monetization and analytics, and submitted for publication; on the third and final week the focus was on user acquisition, campaign development and metrics tracking.
 <br>
 <br>
-The menu and the HUD was projected and coded by me using SwiftUI, while the mechanics was developed by the developer - André Tosin - using SpriteKit.
+I  projected the menu and the HUD, and after coded using SwiftUI while André Tosin developed the mechanics, using SpriteKit.
 <br>
 <br>
                           The app is in it's first version and you can download it by clicking <a href="https://apps.apple.com/br/app/juicy-way/id1502906162"><u>here</u></a>.
