--- a/about.html
+++ b/about.html
@@ -513,10 +513,9 @@
 						<div class="social-links">
 							<ul>
 								<!-- <li><a class="facebook" href="#"></a></li> -->
-								<li><a class="twitter" href="https://twitter.com/rodolfodiniz" target="_blank"></a></li>
+								<li><a class="linkedin" href="https://www.linkedin.com/in/rodolfodiniz/" target="_blank"></a></li>
 								<li><a class="medium" href="https://medium.com/@rodolfodinizbiazi" target="_blank"></a></li>
-								<!-- <li><a class="behance" href="#"></a></li> -->
-								<li><a class="dribbble" href="https://dribbble.com/RodolfoDiniz" target="_blank"></a></li>
+								<li><a class="twitter" href="https://twitter.com/rodolfodiniz" target="_blank"></a></li>
 							</ul>
 						</div>
 					</div>
