--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 					<div class="row">
 
 							<!-- <div class="col-md-6"> -->
-						<div class="col-lg-8 col-md-2">
+						<div class="col-lg-8">
 							<div class="section-title">
 								<h2>Hi, my name is Rodolfo</h2>
 								<!-- <h2>Hi, my name is <span style="color:white;background-color: #000FFF"> Rodolfo </span> </h2> -->
-								<p>I design for user experiences.</p> <p>My job is to uncomplicate complicated problems in an unproblematic way.</p>
+								<p>I design for user experiences.</p> <p>My job is to unproblematically uncomplicate complicated problems.</p>
 										<!-- <div class="spacer">
 										</div> -->
 						</div>
