--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 								<div class="fullscreen-filters">
 									<div class="close-filters">Close</div>
 									<ul>
-										<li class="current" data-group="[&quot;*&quot;]">All Projects<span></span></li>
+										<p><li class="current" data-group="[&quot;*&quot;]">All Projects<span></span></li></p>
 										<li data-group="[&quot;app&quot;]">Awesome Apps<span></span></li>
 										<li data-group="[&quot;experiments&quot;]">Cool Experiments<span></span></li>
 										<li data-group="[&quot;branding&quot;]">Holy Branding<span></span></li>
@@ -129,6 +129,20 @@
 									<div class="work-description">
 										<h4 class="work-title">Hubli</h4>
 									</div>
+								</a><a class="work-item" href="#" data-groups="[&quot;experiments&quot;]">
+									<div class="work-image">
+										<div class="icon-arrow"></div><img src="img/works/work_5.png" alt="Juicy Way">
+									</div>
+									<div class="work-description">
+										<h4 class="work-title">Stack A Flag</h4>
+										<!-- <ul class="work-services">
+											<li>App</li>
+										</ul> -->
+									</div>
+
+
+
+
 
 								</a><a class="work-item" href="#" data-groups="[&quot;app&quot;]">
 									<div class="work-image">
@@ -140,17 +154,10 @@
 											<li>App</li>
 										</ul> -->
 									</div>
+
+
+
 								</a><a class="work-item" href="#" data-groups="[&quot;experiments&quot;]">
-									<div class="work-image">
-										<div class="icon-arrow"></div><img src="img/works/work_3.png" alt="Catalogue — Voice &amp; Vote">
-									</div>
-									<div class="work-description">
-										<h4 class="work-title">Juicy Way</h4>
-										<!-- <ul class="work-services">
-											<li>Typography</li>
-										</ul> -->
-									</div>
-								</a><a class="work-item" href="#" data-groups="[&quot;art direction&quot;]">
 									<div class="work-image">
 										<div class="icon-arrow"></div><img src="img/works/work_4.png" alt="Booklet with Sport Grids">
 									</div>
@@ -160,17 +167,8 @@
 											<li>Art Direction</li>
 										</ul> -->
 									</div>
+
 								</a><a class="work-item" href="#" data-groups="[&quot;app&quot;]">
-									<div class="work-image">
-										<div class="icon-arrow"></div><img src="img/works/work_5.png" alt="Juicy Way">
-									</div>
-									<div class="work-description">
-										<h4 class="work-title">Stack A Flag</h4>
-										<!-- <ul class="work-services">
-											<li>App</li>
-										</ul> -->
-									</div>
-								</a><a class="work-item" href="#" data-groups="[&quot;experiments&quot;]">
 									<div class="work-image">
 										<div class="icon-arrow"></div><img src="img/works/work_6.png" alt="Design 360° Magazine">
 									</div>
@@ -180,6 +178,18 @@
 											<li>Typography</li>
 										</ul> -->
 									</div>
+
+								</a><a class="work-item" href="#" data-groups="[&quot;app&quot;]">
+																		<div class="work-image">
+																			<div class="icon-arrow"></div><img src="img/works/work_3.png" alt="Catalogue — Voice &amp; Vote">
+																		</div>
+																		<div class="work-description">
+																			<h4 class="work-title">Juicy Way</h4>
+																			<!-- <ul class="work-services">
+																				<li>Typography</li>
+																			</ul> -->
+																		</div>
+
 								</a><a class="work-item" href="#" data-groups="[&quot;branding&quot;]">
 									<div class="work-image">
 										<div class="icon-arrow"></div><img src="img/works/work_7.png" alt="Open Your Charisma">
