--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
 									<h2>Coffee-to-pixel converter</h2>
 									<p class="lead">Visual hierarchy lasers. Speedster concept sketches. Bug free code. Overnight endurance.</p>
 									<p class="lead">These are just a few of my special abilities developed during my 4+ years of experience.</p>
-									<p class="lead">If you want to know more about my stats check out <a href="https://www.dl.dropboxusercontent.com/s/l2j36fhnpueqtv0/ResumeRodolfo.pdf?dl=0">my curriculum.</a></p>
+									<p class="lead">If you want to know more about my stats check out <a href="https://www.dl.dropboxusercontent.com/s/l2j36fhnpueqtv0/ResumeRodolfo.pdf?dl=0">my resume.</a></p>
 								</div>
 							</div>
 						</div>
