--- a/about.html
+++ b/about.html
@@ -485,7 +485,7 @@
 												</div><img src="img/studio/image_34.png" alt="Branding for Builders">
 											</div>
 											<div class="article-text">
-												<h4 class="title">WWDC19 in a student's view</h4>
+												<h4 class="title">WWDC19 from a student's view</h4>
 												</div>
 												<div class="studio-member">
 												<p class="role">News</p>
