--- a/about.html
+++ b/about.html
@@ -488,7 +488,7 @@
 												<h4 class="title">WWDC19 from a student's view</h4>
 												</div>
 												<div class="studio-member">
-												<p class="role">News</p>
+												<p class="role">Article</p>
 </div>
 										</a></article>
 								</div>
